# rust-smart-home

./: Cargo.toml  README.md
power_socket/src/: lib.rs
provider/src/: lib.rs
smart_home/: Cargo.toml
smart_home/examples/: home.rs
smart_home/src/: device_info_provider.rs  error.rs  lib.rs  smart_home.rs
src/: lib.rs  main.rs
thermometer/src/: lib.rs
