[package]
name = "smart_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-builder="0.2"
thiserror = "1.0.30"
actix-web = "4"
tokio = { version = "1.19.2", features = ["macros", "sync"] }
serde = { version = "1", features = ["derive"]}
provider = { path = "../provider" }
power_socket = { path = "../power_socket" }
thermometer = { path = "../thermometer" }
